tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__Abettercoolantfo-65KbJVn1T1CSpCdnGfBSqQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6482174444120855209,
  "prerequisites": [
    17850384832099655846
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The subzero temperatures of SpaceTime make it an ideal substitute in all of your superconductor crafts.\n\nYou won't need billions of Liquid Helium anymore!\n\n[note]The earlier tiers of superconductors are also faster to craft with this.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Better Coolant for Your Superconductors",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17850384832099655846
  ],
  "rewards": [],
  "tasks": []
}
