tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__ChaoticCore-AAAAAAAAAAAAAAAAAAAB0Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 465,
  "prerequisites": [
    467,
    3242,
    17850384832099655846
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In the darkest corners of the End you found a dragon that was different. Raw power streaming out in chaotic fashion, threatening to tear apart reality itself! But even that dragon you defeated. Concentrating that raw power within a core certainly isn't easy but it looks like you found a way.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Chaotic Core",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    467,
    3242,
    17850384832099655846
  ],
  "rewards": [],
  "tasks": []
}
