tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__FuwusionMK5-vLnSpTweSki3BaorBNQhxQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4331981564756107717,
  "prerequisites": [
    8750016111539151842
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After seeing how slow Shirabon is to make, you might want to upgrade your Fusion setup.\n\nLike its predecessor, the MK4, this version also supports 4/4 perfect overclocks. Hopefully, this will make your Metastable Oganesson issues a bit more manageable.\n\n[note]You can specify the batch amount in the GUI if you don't want it to handle one-tick recipes.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fuwusion MK5",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8750016111539151842
  ],
  "rewards": [],
  "tasks": []
}
